--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,4 +3,6 @@ theme :
   name : twitter
 ---
 {% include JB/setup %}
+![Image](http://bridgetownelectric.com/communities/1/000/002/243/681//images/14043413.png)
+
 {% include themes/twitter/default.html %}
